[metadata]
name = pyNDI
version = attr: pyNDI.__version__
url = https://github.com/nakajimalab-bmi-tmd/pyNDI
author = Shinya ONOGI
author_email = shinya.onogi.1979@ieee.org
license_file = MIT
description = pyNDI: Communication library for NDI tracking devices (Polaris, Aurora)
long_description = file: README.md

[options]
packages = find:
install_requires =
  numpy
  numpy-quaternion
  pyserial
